// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`channels: outer 1`] = `
<div>
  outer
  <div>
    inner
    outer
  </div>
</div>
`;

exports[`cond fail: a 1`] = `"A"`;

exports[`cond pass: a 1`] = `"A"`;

exports[`cond pass: b 1`] = `"B"`;

exports[`conditional action: a 1`] = `
<div>
  a
</div>
`;

exports[`conditional action: b.a 1`] = `
<div>
  b.a
</div>
`;

exports[`conditional action: b.b 1`] = `
<div>
  b.b
</div>
`;

exports[`conditional state: a 1`] = `
<div>
  a
</div>
`;

exports[`conditional state: b.a 1`] = `
<div>
  b.a
</div>
`;

exports[`conditional state: b.b 1`] = `
<div>
  b.b
</div>
`;

exports[`parallel: bold.off,underline.off,italics.off,list.bullets 1`] = `
<div>
  bold.off
  underline.off
  italics.off
  list.bullets
</div>
`;

exports[`parallel: bold.off,underline.off,italics.off,list.none 1`] = `
<div>
  bold.off
  underline.off
  italics.off
  list.none
</div>
`;

exports[`parallel: bold.off,underline.off,italics.off,list.numbers 1`] = `
<div>
  bold.off
  underline.off
  italics.off
  list.numbers
</div>
`;

exports[`parallel: bold.off,underline.off,italics.on,list.bullets 1`] = `
<div>
  bold.off
  underline.off
  italics.on
  list.bullets
</div>
`;

exports[`parallel: bold.off,underline.off,italics.on,list.none 1`] = `
<div>
  bold.off
  underline.off
  italics.on
  list.none
</div>
`;

exports[`parallel: bold.off,underline.off,italics.on,list.numbers 1`] = `
<div>
  bold.off
  underline.off
  italics.on
  list.numbers
</div>
`;

exports[`parallel: bold.off,underline.on,italics.off,list.bullets 1`] = `
<div>
  bold.off
  underline.on
  italics.off
  list.bullets
</div>
`;

exports[`parallel: bold.off,underline.on,italics.off,list.none 1`] = `
<div>
  bold.off
  underline.on
  italics.off
  list.none
</div>
`;

exports[`parallel: bold.off,underline.on,italics.off,list.numbers 1`] = `
<div>
  bold.off
  underline.on
  italics.off
  list.numbers
</div>
`;

exports[`parallel: bold.off,underline.on,italics.on,list.bullets 1`] = `
<div>
  bold.off
  underline.on
  italics.on
  list.bullets
</div>
`;

exports[`parallel: bold.off,underline.on,italics.on,list.none 1`] = `
<div>
  bold.off
  underline.on
  italics.on
  list.none
</div>
`;

exports[`parallel: bold.off,underline.on,italics.on,list.numbers 1`] = `
<div>
  bold.off
  underline.on
  italics.on
  list.numbers
</div>
`;

exports[`parallel: bold.on,underline.off,italics.off,list.bullets 1`] = `
<div>
  bold.on
  underline.off
  italics.off
  list.bullets
</div>
`;

exports[`parallel: bold.on,underline.off,italics.off,list.none 1`] = `
<div>
  bold.on
  underline.off
  italics.off
  list.none
</div>
`;

exports[`parallel: bold.on,underline.off,italics.off,list.numbers 1`] = `
<div>
  bold.on
  underline.off
  italics.off
  list.numbers
</div>
`;

exports[`parallel: bold.on,underline.off,italics.on,list.bullets 1`] = `
<div>
  bold.on
  underline.off
  italics.on
  list.bullets
</div>
`;

exports[`parallel: bold.on,underline.off,italics.on,list.none 1`] = `
<div>
  bold.on
  underline.off
  italics.on
  list.none
</div>
`;

exports[`parallel: bold.on,underline.off,italics.on,list.numbers 1`] = `
<div>
  bold.on
  underline.off
  italics.on
  list.numbers
</div>
`;

exports[`parallel: bold.on,underline.on,italics.off,list.bullets 1`] = `
<div>
  bold.on
  underline.on
  italics.off
  list.bullets
</div>
`;

exports[`parallel: bold.on,underline.on,italics.off,list.none 1`] = `
<div>
  bold.on
  underline.on
  italics.off
  list.none
</div>
`;

exports[`parallel: bold.on,underline.on,italics.off,list.numbers 1`] = `
<div>
  bold.on
  underline.on
  italics.off
  list.numbers
</div>
`;

exports[`parallel: bold.on,underline.on,italics.on,list.bullets 1`] = `
<div>
  bold.on
  underline.on
  italics.on
  list.bullets
</div>
`;

exports[`parallel: bold.on,underline.on,italics.on,list.none 1`] = `
<div>
  bold.on
  underline.on
  italics.on
  list.none
</div>
`;

exports[`parallel: bold.on,underline.on,italics.on,list.numbers 1`] = `
<div>
  bold.on
  underline.on
  italics.on
  list.numbers
</div>
`;
